# SideriaAudioLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  run-slib-tests.yml
projects/disperse-daisy/: Blink.cpp  Disperse.cpp  Makefile  params.h
projects/disperse-daisy/util/: SmoothedParameter.cpp  SmoothedParameter.h  TrackedParameter.h
projects/disperse-juce/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/disperse-juce/debug_ui/: DebugUI.cpp  DebugUI.h
projects/disperse-juce/ui/: DebugUI.cpp  DebugUI.h  DisperseUI.cpp  DisperseUI.h
projects/disperse-juce/ui/lookAndFeel/: DisperseLookAndFeel.cpp  DisperseLookAndFeel.h
siderialib/: CMakeLists.txt  SideriaAudioLib.cpp  SideriaAudioLib.h
siderialib/include/: Effect.h  StereoEffect.h
siderialib/include/dsp/: Buffer.h  LFO.h  Math.h  Types.h
siderialib/include/dsp/buffers/: CBuffer.h  MonoCircularBuffer.h  StereoCircularBuffer.h
siderialib/include/effects/: Disperse.h  IIRFilter.h
siderialib/include/effects/delay/: ModulatedDelay.h
siderialib/include/effects/disperse/: DisperseParallelVoice.h
siderialib/include/effects/filter/: BiquadFilter.h
siderialib/include/effects/resample/: Decimate.h  Upsample.h  VariableResample.h
siderialib/include/util/: Random.h  SmoothedParameter.h
siderialib/lib/: siderialib.h
siderialib/lib/dsp/: LFO.cpp  Math.cpp  Oversample.cpp  Oversample.h  Types.h
siderialib/lib/dsp/buffers/: MonoCircularBuffer.cpp  MonoCircularBuffer.h  StereoCircularBuffer.cpp  StereoCircularBuffer.h
siderialib/lib/effects/: Disperse.cpp  Disperse.h
siderialib/lib/effects/delay/: ModulatedDelay.cpp  ModulatedDelay.h
siderialib/lib/effects/disperse/: DisperseConstants.h  DisperseParallelVoice.h
siderialib/lib/effects/filter/: BiquadFilter.cpp  WindowedSincFilter.cpp  WindowedSincFilter.h
siderialib/lib/effects/nonlinear/: TapeSaturation.h
siderialib/lib/effects/resample/: Decimate.cpp  Decimate.h  Upsample.cpp  Upsample.h  VariableResample.h
siderialib/lib/util/: Random.cpp  SmoothedParameter.cpp  StaticMemoryAllocation.h  StaticMemoryBlock.cpp
siderialib/src/dsp/: Buffer.cpp  LFO.cpp  Math.cpp
siderialib/src/dsp/buffers/: CBuffer.cpp  MonoCircularBuffer.cpp  StereoCircularBuffer.cpp
siderialib/src/effects/: Disperse.cpp
siderialib/src/effects/delay/: ModulatedDelay.cpp
siderialib/src/effects/disperse/: DisperseParallelVoice.cpp
siderialib/src/effects/filter/: BiquadFilter.cpp  WindowedSincFilter.cpp
siderialib/src/effects/nonlinear/: TapeSaturation.cpp
siderialib/src/util/: Random.cpp  SmoothedParameter.cpp
siderialib/tests/: CMakeLists.txt  TestMain.cpp
siderialib/tests/dsp/: TestMath.cpp
siderialib/tests/dsp/buffers/: TestStereoCircularBuffer.cpp
siderialib/tests/dsp/effects/filter/: TestBiquadFilter.cpp  TestWindowedSinc.cpp
siderialib/tests/dsp/effects/resample/: TestDecimate.cpp  TestUpsample.cpp  TestVariableResample.cpp
siderialib/tests/test_utils/: SineFrequencyAnalysis.cpp  SineFrequencyAnalysis.h  TestSineFrequencyAnalysis.cpp
siderialib/tests/util/: TestSmoothedParameter.cpp  TestStaticMemoryAllocation.cpp
spkr/: CMakeLists.txt  spkr.cpp
